quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Tenant_Config__mdt/QuoteForge_Tenant_Config__mdt.object-meta.xml
<CustomObject>
    <label>QuoteForge Tenant Config</label>
    <pluralLabel>QuoteForge Tenant Configs</pluralLabel>
</CustomObject>