quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Tenant_Config__mdt/fields/Auth_Email__c.field-meta.xml
<CustomField>
    <fullName>Auth_Email__c</fullName>
    <label>Auth Email</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>