quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Tenant_Config__mdt/fields/Auth_Password__c.field-meta.xml
<CustomField>
    <fullName>Auth_Password__c</fullName>
    <label>Auth Password</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>