quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Tenant_Config__mdt/fields/Tenant_Slug__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Slug__c</fullName>
    <label>Tenant Slug</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>